--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.0.7
   http: ^0.13.3
   sms_autofill: ^1.2.1
+  flutter_secure_storage: ^4.2.1
   #otp_autofill: ^1.1.0
 
 dev_dependencies:
