--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ dependencies:
   cupertino_icons: ^1.0.3
   get: ^4.3.8
   shared_preferences: ^2.0.7
-  http: ^0.13.3
+  http: any
   sms_autofill: ^1.2.1
   flutter_secure_storage: ^4.2.1
   #otp_autofill: ^1.1.0
   #dio: ^3.0.8
+  image_picker: ^0.6.7+22
   path: ^1.6.4
-  file_picker: ^2.1.7
+  file_picker: ^2.1.6
   open_file: ^3.2.1
   path_provider: ^2.0.4
 
