--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   get: ^4.3.8
   shared_preferences: ^2.0.7
   http: ^0.13.3
-  #sms_autofill: ^1.2.1
+  sms_autofill: ^2.2.0
   flutter_secure_storage: ^4.2.1
   #otp_autofill: ^1.1.0
   #dio: ^3.0.8
