--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   #otp_autofill: ^1.1.0
   #dio: ^3.0.8
- # image_picker: ^0.6.7+22
+  image_picker: ^0.8.4+1
   path: ^1.6.4
   #file_picker: ^2.1.6
   open_file: ^3.2.1
