--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   #otp_autofill: ^1.1.0
   #dio: ^3.0.8
+  carousel_slider: ^4.0.0
   image_picker: ^0.8.4+1
   path: ^1.6.4
   #file_picker: ^2.1.6
@@ -61,6 +62,9 @@ flutter:
   assets:
     - lib/assets/logo1.jpg
     - lib/assets/profile_default.png
+    - lib/assets/image3.jpg
+    - lib/assets/image2.jpg
+    - lib/assets/image1.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
