--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   location: ^4.3.0
   google_maps_flutter: ^2.0.9
   geocode: ^1.0.1
-  geolocator: ^7.7.1
+  geolocator: ^7.7.0
+  geocoding: ^2.0.1
 
 dev_dependencies:
   flutter_test:
